# TTDE

./: .gitignore  README.md  pyproject.toml
ttde/: all_imports.py  eval.py  train.py
ttde/datasets/: bsds300.py  ffjord_toy_datasets.py  gas.py  hepmass.py  miniboone.py  power.py  resnet_embeddings.py
ttde/dl_routine/: __init__.py  trainer_base.py
ttde/score/: all_imports.py  trainer.py
ttde/score/experiment_setups/: base.py  data_setups.py  init_setups.py  model_setups.py  trainer_setups.py
ttde/score/models/: continuous_canonical_init.py  discrete_canonical_init.py  opt_for_table_data.py
ttde/tt/: basis.py  losses.py  riemannian_optimizer.py  tensors.py  tt_opt.py
ttde/utils/: __init__.py  polynomial.py
