[project]
name = "ttde"
version = "1.0.0"
description = ""
authors = [
    {name = "PG_LoLo", email = "novgosh@yandex.ru"},
]
dependencies = [
    "numpy==1.24.2",
    "tqdm==4.65.0",
    "wandb==0.14.0",
    "jax==0.4.8",
    "flax==0.6.8",
    "opt-einsum==3.3.0",
    "h5py==3.8.0",
    "pandas==1.5.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
